--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "project3",
   "version": "0.1.0",
+  "homepage": "https://Daemot.github.io/practice-react-blog",
   "private": true,
   "dependencies": {
     "axios": "^1.6.7",
@@ -14,6 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -35,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
